# network-manager-sidebar

./: .gitignore  AGENTS.md  README.md  meson.build  nm-sidebar  nm-sidebar.css
.github/workflows/: build-packages.yml
packaging/: nfpm.yaml
packaging/aur/: PKGBUILD.in
src/actions/: network_actions.c  network_actions.h
src/cli/: cli_args.c  cli_args.h  main.c
src/core/: command_socket.c  command_socket.h  config.h  ipc.c  ipc.h  ipc_commands.c  ipc_commands.h  ipc_paths.c  ipc_paths.h  target_output.c  target_output.h
src/data/: connection_state.c  connection_state.h  labels.c  labels.h
src/gui/: app.c  app.h  command_server.c  command_server.h  layer_shell.c  layer_shell.h  main.c  styles.c  styles.h
src/sections/: connection_info.c  connection_info.h  helpers.c  helpers.h  status.c  status.h  vpn.c  vpn.h  wifi.c  wifi.h
